bgd-k8s/overlays/kind/bgd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
  name: bgd-ingress
  namespace: bgd
spec:
  ingressClassName: nginx
  rules:
  - host: bgd.c0a801fe.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bgd
            port:
              number: 8080
